26.3 kompatibilität